fix map container spacing

--- a/src/less/gisp-theme/_grid-layout.less
+++ b/src/less/gisp-theme/_grid-layout.less
@@ -1,5 +1,7 @@
 .row-grid {
     display: table;
+    margin-left: -15px;
+    margin-right: -15px;
     width: 100%;
 }
 
