--- a/src/less/gisp-theme/_maps.less
+++ b/src/less/gisp-theme/_maps.less
@@ -82,6 +82,11 @@
     }
 }
 
+/* Map */
+.map-col {
+    width: 66.66666667%;
+}
+
 .map-wrapper {
     height: 620px;
     margin-bottom: 20px;
